[workspace]
resolver = "2"
members = [
    "spawn-kit-core",
    "spawn-kit-multisig",
    "spawn-kit-timelock",
    "spawn-kit-ratelimit",
    "spawn-kit-access-control",
    "spawn-kit-escrow",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
spawn-kit-core = { path = "spawn-kit-core" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6"

[profile.dev]
panic = "abort"

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
panic = "abort"
