[package]
name = "spawn-kit-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
ckb-std = { version = "0.16", features = ["build-with-clang"] }
serde = { workspace = true }
serde-json-core = { workspace = true }
heapless = "0.5"

[dev-dependencies]
serde_json = "1"
