[package]
name = "spawn-kit-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
ckb-std = { version = "0.16", default-features = false, features = ["allocator"] }
serde = { workspace = true }
serde-json-core = { workspace = true }

[dev-dependencies]
serde_json = "1"
