[package]
name = "spawn-diag"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "spawn-diag"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
spawn-kit-core = { path = "../../spawn-kit-core" }
ckb-std = { version = "0.16", default-features = false, features = ["allocator", "ckb-types"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-json-core = "0.6"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
